Remove height from doc bio for overflow issues

--- a/src/style/components/meetTheDocs.css
+++ b/src/style/components/meetTheDocs.css
@@ -48,7 +48,7 @@
     bottom: 0;
     left: -50px;
     right: 0;
-    height: 300px;
+    /*height: 350px;*/
     width: 400px;
     opacity: 0;
     transition: .25s ease;
